2001-04-19  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mime-bbdb.el: Load "bbdb-hooks" when the symbol function
	`bbdb-extract-field-value' is not bound or it is set up as an
	autoloaded function. [cf. <emacs-mime-ja:799,842,843,844,845,846>]

2001-04-17  YAMASHITA Junji   <ysjj@unixuser.org>

	* semi-def.el (mime-browse-url-regexp): Allow https.

2001-03-06  Hiroya Murata     <lapis-lazuli@pop06.odn.ne.jp>

	* mime-edit.el (mime-edit-set-parameter): Get rid of the duplicated
	optional fields.

2000-12-28  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mime-view.el: Revert to use `static'.


2000-12-28  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* SEMI: Version 1.14.3 (Ushinoya) released.

	* mime-view.el (mime-view-read-situation-examples-file): Don't try
	to read situation-examples-file is it is nil.
	(mime-situation-examples-file): Avoid to read
	situation-examples-file at compile time.

2000-12-28  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mime-view.el (mime-view-read-situation-examples-file): Display
	warning. [cf. <emacs-mime-ja:680>]

2000-12-27  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mime-view.el (mime-view-mailcap-files): New user option.
	(mime-view-read-mailcap-files): Renamed from
	`mime-view-read-mailcap'; read `mime-view-mailcap-files'.

	* mime-view.el (mime-view-read-situation-examples-file): New
	function; don't occur error.
	(mime-view-read-mailcap): New function.

2000-12-27  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mime-play.el (mime-play-messages-coding-system): Renamed from
	`mime-mailcap-method-messages-coding-system'.

	* pgg-def.el (pgg-messages-coding-system): Change default value to
	nil.

2000-12-27  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mime-play.el (mime-activate-mailcap-method): Fix typo.

2000-12-26   Daiki Ueno  <ueno@unixuser.org>

	* mime-play.el (mime-mailcap-method-messages-coding-system): New
	variable.
	(mime-activate-mailcap-method): Use it.
